# TuringMachine

./: README.md  TuringMachine.cabal  adder.txt  adder_adv.txt  busy.txt  hello.txt
app/: Main.hs
src/: Render.hs  TuringMachine.hs  Util.hs
test/: TuringMachineSpec.hs  UtilSpec.hs
