name:                TuringMachine
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/TuringMachine#readme
license:             BSD3
license-file:        LICENSE
author:              Sandro Panighetti
maintainer:          sandro.panighetti@gmail.com
copyright:           2016 Sandro Panighetti
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TuringMachine
                     , Util
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable TuringMachine-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TuringMachine
                     , ansi-terminal
  default-language:    Haskell2010

test-suite TuringMachine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , TuringMachine
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/TuringMachine
